# coax-meet

./: .gitignore  README.md  docker-compose-dev.yml  mkdocs.yml
.docs/: CHANGELOG.md  index.md  level1-system.puml  level2-architecture.puml
.docs/getting_started/: .pages  about.md  commands.md  setup.md
backend/: .coveragerc  .flake8  build_layer.sh  package-lock.json  package.json  pyproject.toml  serverless.yml
backend/authentication/: apps.py  config.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py
backend/locale/uk/LC_MESSAGES/: django.po
backend/meet/: admin.py  apps.py  consumers.py  filters.py  models.py  serializers.py  service.py  tasks.py  tests.py  urls.py  views.py
backend/meet/migrations/: 0001_initial.py  0002_room_time_room_weekdays.py  0003_room_is_reminder_set.py  0004_remove_room_is_reminder_set_room_periodic_task.py  0005_room_members.py  0006_alter_room_periodic_task.py  0007_alter_room_periodic_task.py  0008_remove_room_type_of_room_remind_before.py  0009_alter_room_created_at_alter_room_description_and_more.py  0010_alter_room_members.py
backend/project/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
backend/templates/admin/: base_site.html
backend/templatetags/: i18n_switcher.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  Routes.jsx  i18n.js
frontend/src/components/: Footer.jsx  index.jsx
frontend/src/components/authentication/: DeleteAccount.jsx  Login.jsx  PasswordReset.jsx  (+3 more)
(+12 files in other folders)
